--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,7 @@
     crossorigin="anonymous"></script>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>React App</title>
+  <title>OrderTrack101</title>
 </head>
 
 <body>
